--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,20 @@
 {
     "files.exclude": {
-        "**/.git": true,         // this is a default value
-        "**/.DS_Store": true,    // this is a default value
-        "**/.history": true,    // this is a default value
-
-        "**/node_modules": true, // this excludes all folders 
-                                // named "node_modules" from 
-                                // the explore tree
-    }
+        "*/**/node_modules/": true,
+        "wp-includes/": true,
+        "wp-admin/": true,
+        //"wp-*.*": true,
+        "wp-config.*": false,
+        "xmlrpc.php": true,
+        ".vscode/": true,
+        "*/**/cache/": true,
+        "*/**/uploads/": true,
+        "*/**/infinitewp/": true,
+        "*/**/.github/": true,
+        "**/.history/": true
+    },
+    "search.exclude": {
+        "build/": true,
+        "**/.history/": true
+    },
 }
