Ui and API enpoinst fixed

--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,6 @@
 vendor/
 .history
 doc/
-
-
-
 __debug_bin
 go.sum
 data/STT_DB.db
@@ -25,3 +22,8 @@ conf.d/gcp-stt-api-key.json
 **/node_modules
 web/pnpm-lock.yaml
 **/admin_lte
+**/.cache
+**/dist
+**/.parcel-cache
+**/build
+data/*
