--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,10 +30,12 @@
         "gonic",
         "gorm",
         "naoina",
+        "pushmenu",
         "rowid",
         "rtmp",
         "speechpb",
         "streamid",
+        "treeview",
         "vframes"
     ],
     "todo-tree.tree.showBadges": false,
