Added heroku config and updated POSTMAN collections

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -18,6 +18,6 @@ jobs:
       with:
         go-version: 1.16
 
-    - name: build
-      run: docker build ./
+    #- name: build
+    #  run: docker build ./
     #- name: publish
